# container-loading-sim

./: .gitignore  README-DESKTOP.md  README.md  app.js  container-db.js  debug-3d-viewer-timeout.md  debug-cargo-stacking-reimport.md  design-system.html  desktop-build.sh  e2e_test.py  field-parser.js  index.html  package-lock.json  package.json  packing-engine.js  pdf-exporter.js  styles.css  tauri-plugin-bridge.js  three-viewer.js  yantai-test.xlsx  yantai-v2.xlsx  土耳其货物明细(1).xlsx  烟台箱单测试.xlsx
.dbg/: 3d-viewer-timeout.env  trae-debug-log-3d-viewer-timeout.ndjson
.github/workflows/: release.yml
.trae/documents/: container-loading-spec-code-audit-plan.md  excel-full-simulation-test-plan.md  fix-container-type-and-cleanup-plan.md
docs/: container-loading-operation-spec.md
dogfood-output/: browser-file-test.py  browser-smoke-test.py  core-algorithm-test.js  debug-autoretry.js  debug-bqty.js  debug-fix-buildems.js  debug-fr-packing.js  debug-items.js  debug-no-layer.js  debug-overlap.js  debug-recommend.js  debug-scale.js  debug-space.js  debug-trace.js  dialectical-review-report.md  excel-browser-smoke.py  excel-simulation-report.md  report-v2.md  report.md  run-core-tests.js  run-excel-simulation.js  test-runner.js  test-spec-accuracy.js  test-upload.csv  test_data.csv  审阅报告-v1.md
scripts/: build-frontend.js  build-frontend.sh  build-windows.ps1  test-all-scenarios.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+4 files in other folders)
